--- a/styles/master.scss
+++ b/styles/master.scss
@@ -172,6 +172,10 @@ textarea {
         letter-spacing: 2.5px;
         color: $black;
     }
+
+    a {
+        text-decoration: none;
+    }
 }
 
 .legal {
