Change Font for Content section

--- a/styles/master.css
+++ b/styles/master.css
@@ -67,7 +67,7 @@ h2 {
   color: #000000; }
 
 #about .content {
-  font-family: "Roboto", sans-serif;
+  font-family: "Nunito Sans", sans-serif;
   font-size: 20px;
   letter-spacing: 1.7px;
   color: #000000; }
