--- a/styles/master.scss
+++ b/styles/master.scss
@@ -29,7 +29,7 @@ $jonah: "Jonah",
 sans-serif;
 $prohandy: "Prohandy",
 sans-serif;
-$roboto: 'Roboto',
+$nunito: 'Nunito Sans',
 sans-serif;
 
 // Global and Reset --------------------
@@ -119,7 +119,7 @@ h2 {
 #about {
 
     .content {
-        font-family: $roboto;
+        font-family: $nunito;
         font-size: 20px;
         letter-spacing: 1.7px;
         color: $black;
