--- a/styles/master.scss
+++ b/styles/master.scss
@@ -531,7 +531,7 @@ nav {
 .uk-card-default {
     max-height: 500px;
     overflow: hidden;
-
+    /*
     img {
 
         transition: 0.15s ease-in-out;
@@ -541,6 +541,7 @@ nav {
             filter: saturate(100%);
         }
     }
+    */
 }
 
 // Section About --------------------
