--- a/styles/medias.scss
+++ b/styles/medias.scss
@@ -267,6 +267,10 @@
 
 @media screen and (max-width: 600px) {
 
+    #project-grid {
+        margin: 0 auto;
+    }
+
     .uk-modal-body {
         .top {
             
