--- a/styles/master.css
+++ b/styles/master.css
@@ -344,19 +344,30 @@ nav ul {
       margin-right: 0px; }
 
 .uk-card-default {
-  max-height: 500px;
-  overflow: hidden;
-  /*
-    img {
-
-        transition: 0.15s ease-in-out;
-        filter: saturate(0%);
-
-        &:hover {
-            filter: saturate(100%);
-        }
-    }
-    */ }
+  height: 300px; }
+  .uk-card-default .tile-img-top {
+    position: relative; }
+    .uk-card-default .tile-img-top .tile-img-top__img-block {
+      position: relative;
+      display: block;
+      max-width: 386px;
+      border-radius: 4px;
+      overflow: hidden; }
+      .uk-card-default .tile-img-top .tile-img-top__img-block.tile-img-top__img-block_animate {
+        transition: transform .3s, box-shadow .4s; }
+        .uk-card-default .tile-img-top .tile-img-top__img-block.tile-img-top__img-block_animate:hover {
+          transform: perspective(1px) scale(1.048); }
+          .uk-card-default .tile-img-top .tile-img-top__img-block.tile-img-top__img-block_animate:hover .label {
+            transform: perspective(1px) translateZ(0); }
+          .uk-card-default .tile-img-top .tile-img-top__img-block.tile-img-top__img-block_animate:hover img {
+            transform: perspective(1px) scale(1.1); }
+      .uk-card-default .tile-img-top .tile-img-top__img-block img {
+        max-width: 386px;
+        width: 100%;
+        height: auto;
+        display: block;
+        border-radius: 4px;
+        transition: transform .3s; }
 
 #about {
   margin-bottom: 200px; }
