--- a/styles/master.scss
+++ b/styles/master.scss
@@ -529,19 +529,39 @@ nav {
 }
 
 .uk-card-default {
-    max-height: 500px;
-    overflow: hidden;
-    /*
-    img {
+    height: 300px;
 
-        transition: 0.15s ease-in-out;
-        filter: saturate(0%);
-
-        &:hover {
-            filter: saturate(100%);
+    .tile-img-top {
+        position: relative;
+        .tile-img-top__img-block {
+            position: relative;
+            display: block;
+            max-width: 386px;
+            border-radius: 4px;
+            overflow: hidden;
+            &.tile-img-top__img-block_animate {
+            transition: transform .3s, box-shadow .4s;
+            &:hover {
+                transform: perspective(1px) scale(1.048);
+                .label {
+                transform: perspective(1px) translateZ(0);
+                }
+                img {
+                transform: perspective(1px) scale(1.1);
+                }
+            }
+            }
+            img {
+            max-width: 386px;
+            width: 100%;
+            height: auto;
+            display: block;
+            border-radius: 4px;
+            transition: transform .3s;
+            }
         }
     }
-    */
+    
 }
 
 // Section About --------------------
